--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hangman App</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
-  <body>
+  <body ng-app="HangmanApp" ng-controller="GameController">
     
   </body>
 </html>
