--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
-    
+    {{demo}}
   </body>
 </html>
