--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Hangman App</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
     {{demo}}
