--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
-    {{demo}}
+    <div>
+      <div>You have to guess: {{tempDisplayWord}}</div>
+    </div>
   </body>
 </html>
