--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
     <div>
-      <div>You have to guess: {{tempDisplayWord}}</div>
+      <div>You have to guess: {{displayWord}}</div>
     </div>
   </body>
 </html>
