--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <body ng-app="HangmanApp" ng-controller="GameController">
     <div>
       <div>You have to guess: {{displayWord}}</div>
+      <div>
+        <div>
+          <input type="text" name="guess" ng-model="input.letter">
+          <button ng-click="letterChosen()">Submit</button>
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
