--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 <html>
   <head>
     <title>Hangman App</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="app.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script src="JS/knob.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
-    <div>
+    <p class="title">HANGMAN
+</p>
+    <div class="guess">
       <div>
         Guesses Left :: {{guesses}}
       </div>
-      <div>
+      <div class="incorrectLetter">
         Your Incorrect Guesses :: <span ng-repeat="letter in incorrectLettersChosen">{{letter}}</span>
       </div>
-       <div>
+       <div class="correctLetter">
         Your Correct Guesses :: <span ng-repeat="letter in correctLettersChosen">{{letter}}</span>
       </div>
       <div>You have to guess: {{displayWord}}</div>
       <div>
         
-        <div>
+        <div class="input">
           <input type="text" name="guess" ng-model="input.letter">
-          <button ng-click="letterChosen()">Submit</button>
+          <button class="button" ng-click="letterChosen()">Submit</button>
           
         </div>
       </div>
