--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Your Incorrect Guesses :: <span ng-repeat="letter in incorrectLettersChosen">{{letter}}</span>
       </div>
        <div class="correctLetter">
-        Your Correct Guesses :: <span ng-repeat="letter in correctLettersChosen">{{letter}}</span>
+        <i class="correct-icon material-icons" style="font-size:60px;color:#009688;">thumb_up</i> <span ng-repeat="letter in correctLettersChosen">{{letter}}</span>
       </div>
       <div>You have to guess: {{displayWord}}</div>
       <div>
