--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="app.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="JS/knob.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body ng-app="HangmanApp" ng-controller="GameController">
