--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </p>
     <div >
       <div class="guess">
-	      <input type="text" class="dial">
+	      <input type="text" value="6" class="dial">
 	      </div>
       </div>
       
