--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	    <div class="incorrectLetter">
         <i class="incorrect-icon material-icons" style="font-size:60px;color:#E91E63;">thumb_down</i><span ng-repeat="letter in incorrectLettersChosen">{{letter}}</span>
       </div>
-      <div>You have to guess: {{displayWord}}</div>
+      <div class="word">You have to guess: {{displayWord}}</div>
       <div>
         
         <div class="input">
